tests/success/dynamic_default_default_constructor.bz
struct test1_t
{
	constructor();
}

struct test2_t
{
	.value: test1_t;
}

function main()
{
	let _ = test2_t();
}
