tests/error/type_match/base_case_implicit_conversion1.bz
function test()
{
	let _: uint16 = 0u32;
}
